1st working maps

--- a/src/app/maps/maps.component.html
+++ b/src/app/maps/maps.component.html
@@ -1,4 +1,3 @@
-<mat-card><iframe width="600" height="450" style="border:0" loading="lazy" allowfullscreen
-  src="https://www.google.com/maps/embed/v1/search?q=restaurants+near+Cebu,+Philippines&key=..."></iframe></mat-card>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCd0aLF9-3_etIX_lacYrXRyIUgx-3lZxo&callback=initMap"></script>
+<mat-card><google-map></google-map></mat-card>
+
 
